--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <header>
         <h1>What is Javascript?!</h1>
     </header>
+    <main>
+        <p>JavaScript is a scripting or programming language that allows you to implement complex features on web pages — every time a web page does more than just sit there and display static information for you to look at — displaying timely content updates,
+            interactive maps, animated 2D/3D graphics, scrolling video jukeboxes, etc. — you can bet that JavaScript is probably involved.</p>
+    </main>
 </body>
 
 </html>
