feat: add header

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 
 <body>
     <header>
-        <h1>What is Javascript?!</h1>
+        <h1>Aleksandr Lobkov personal CV page</h1>
+        <div class="photoindiv"><img class="cvphoto" src="cv.jpg" alt="my photo"></div>
+        <nav>
+            <a class="nava" href="#about">About me</a><a class="nava" href="#skills">My skills</a><a class="nava" href="#education">Education</a>
+            <a class="nava" href="#example">Example one of my codes</a><a class="nava" href="#contacts">Contacts of me</a>
+        </nav>
     </header>
-    <main>
-        <p>JavaScript is a scripting or programming language that allows you to implement complex features on web pages — every time a web page does more than just sit there and display static information for you to look at — displaying timely content updates,
-            interactive maps, animated 2D/3D graphics, scrolling video jukeboxes, etc. — you can bet that JavaScript is probably involved.</p>
-    </main>
 </body>
 
 </html>
