feat: add information about me

--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
         </nav>
     </header>
 </body>
+<main>
+    <h2 class="headerp" id="about">
+        About me:
+    </h2>
+    <p class="mainp">
+        I really like programming, it is very exciting for me. I was a little fond of 3d modeling. I study English in order to always be on the crest of the wave of information technology and keep abreast of advanced approaches.</p>
+    <p>Almost finished the course JavaScript Algorithms and Data Structures on the site freecodecamp. I passed it 98%. The entire list of solved problems can be viewed in my profile: <a href="https://www.freecodecamp.org/alekprogrammer">freecodecamp</a>
+    </p>
 
 </html>
