feat: add footer

--- a/index.html
+++ b/index.html
@@ -16,40 +16,39 @@
             <a class="nava" href="#example">Example one of my codes</a><a class="nava" href="#contacts">Contacts of me</a>
         </nav>
     </header>
-</body>
-<main>
-    <h2 class="headerp" id="about">
-        About me:
-    </h2>
-    <p class="mainp">
-        I really like programming, it is very exciting for me. I was a little fond of 3d modeling. I study English in order to always be on the crest of the wave of information technology and keep abreast of advanced approaches.</p>
-    <p>Almost finished the course JavaScript Algorithms and Data Structures on the site freecodecamp. I passed it 98%. The entire list of solved problems can be viewed in my profile: <a href="https://www.freecodecamp.org/alekprogrammer">freecodecamp</a>
-    </p>
-    <h2 class="headerp" id="skills">
-        My skills:
-    </h2>
-    <p class="mainp">
-        <ol>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Basics JavaScript</li>
-            <li>Basics C #</li>
-            <li>Basics C ++</li>
-        </ol>
-    </p>
-    <h2 class="headerp" id="education">
-        Education:
-    </h2>
-    <p class="mainp">
-        Vocational Pedagogical College named after Gagarin: Specialty - Computer systems and complexes.
-    </p>
-    <h2 class="headerp" id="example">
-        Example one of my codes:
-    </h2>
-    <p class="mainp">
-        I solved the problem <a href="https://www.codewars.com/kata/5412509bd436bd33920011bc">https://www.codewars.com/kata/5412509bd436bd33920011bc</a> from the site Codewars.<br> This is my solve:
-    </p>
-    <pre>
+    <main>
+        <h2 class="headerp" id="about">
+            About me:
+        </h2>
+        <p class="mainp">
+            I really like programming, it is very exciting for me. I was a little fond of 3d modeling. I study English in order to always be on the crest of the wave of information technology and keep abreast of advanced approaches.</p>
+        <p>Almost finished the course JavaScript Algorithms and Data Structures on the site freecodecamp. I passed it 98%. The entire list of solved problems can be viewed in my profile: <a href="https://www.freecodecamp.org/alekprogrammer">freecodecamp</a>
+        </p>
+        <h2 class="headerp" id="skills">
+            My skills:
+        </h2>
+        <p class="mainp">
+            <ol>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Basics JavaScript</li>
+                <li>Basics C #</li>
+                <li>Basics C ++</li>
+            </ol>
+        </p>
+        <h2 class="headerp" id="education">
+            Education:
+        </h2>
+        <p class="mainp">
+            Vocational Pedagogical College named after Gagarin: Specialty - Computer systems and complexes.
+        </p>
+        <h2 class="headerp" id="example">
+            Example one of my codes:
+        </h2>
+        <p class="mainp">
+            I solved the problem <a href="https://www.codewars.com/kata/5412509bd436bd33920011bc">https://www.codewars.com/kata/5412509bd436bd33920011bc</a> from the site Codewars.<br> This is my solve:
+        </p>
+        <pre>
         // return masked string
         function maskify(cc) {
          let str = '';
@@ -78,6 +77,16 @@
           return str;
         }
         </pre>
-</main>
+    </main>
+    <footer>
+        <h2 class="headerp" id="contacts">
+            Contacts of me:
+        </h2>
+        <p class="mainp">
+            Email: das149848@gmail.com<br> Discord: @alekism
+        </p>
+        <a href="https://rs.school/js/"><img class="footerimg" src="https://rs.school/images/rs_school_js.svg"></a>
+    </footer>
+</body>
 
 </html>
