feat: added information about the year of release of the program

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             Email: das149848@gmail.com<br> Discord: @alekism
         </p>
         <a href="https://rs.school/js/"><img class="footerimg" src="https://rs.school/images/rs_school_js.svg"></a>
+        <p>Aleksandr Lobkov 2022</p>
     </footer>
 </body>
 
