--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -85,7 +86,7 @@
         <p class="mainp">
             Email: das149848@gmail.com<br> Discord: @alekism
         </p>
-        <a href="https://rs.school/js/"><img class="footerimg" src="https://rs.school/images/rs_school_js.svg"></a>
+        <a href="https://rs.school/js/"><img class="footerimg" src="https://rs.school/images/rs_school_js.svg" alt="logotip"></a>
         <p>Aleksandr Lobkov 2022</p>
     </footer>
 </body>
