feat: add link to Git Hub and information about languages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="photoindiv"><img class="cvphoto" src="cv.jpg" alt="my photo"></div>
         <nav>
             <a class="nava" href="#about">About me</a><a class="nava" href="#skills">My skills</a><a class="nava" href="#education">Education</a>
-            <a class="nava" href="#example">Example one of my codes</a><a class="nava" href="#contacts">Contacts of me</a>
+            <a class="nava" href="#languages">Languages</a><a class="nava" href="#example">Example one of my codes</a><a class="nava" href="#contacts">Contacts of me</a>
         </nav>
     </header>
     <main>
@@ -41,6 +41,13 @@
         <p>
             Vocational Pedagogical College named after Gagarin: Specialty - Computer systems and complexes.
         </p>
+        <h2 class="headerp" id="languages">
+            Languages:
+        </h2>
+        <ol>
+            <li>Russian - Native</li>
+            <li>English - Low Intermediate</li>
+        </ol>
         <h2 class="headerp" id="example">
             Example one of my codes:
         </h2>
@@ -82,7 +89,7 @@
             Contacts of me:
         </h2>
         <p>
-            Email: das149848@gmail.com<br> Discord: @alekism
+            Email: das149848@gmail.com<br> Discord: @alekism<br> Git Hub: <a href="https://github.com/alekprogrammer">@alekprogrammer</a>
         </p>
         <a href="https://rs.school/js/"><img class="footerimg" src="https://rs.school/images/rs_school_js.svg" alt="logotip"></a>
         <p>Aleksandr Lobkov 2022</p>
